--- a/xcelium.d/history
+++ b/xcelium.d/history
@@ -6,3 +6,22 @@ s1::(08Mar2023:14:32:11):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps 
 s2::(08Mar2023:14:34:07):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 2332 +define+SIZE1 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v )
 s3::(08Mar2023:14:35:53):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 2121 +define+SIZE1 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex_1024.so )
 s4::(08Mar2023:14:36:20):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 2121 +define+SIZE1 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex_1024.so )
+s5::(08Mar2023:14:43:56):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 2332 +define+SIZE1 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v )
+s6::(08Mar2023:14:45:15):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 232323 +define+SIZE1 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v )
+s7::(08Mar2023:14:56:01):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 238329 +define+SIZE1 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v )
+s8::(08Mar2023:15:23:45):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -vlog_ext +.vh -disable_sem2009 test.sv -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex.so )
+s9::(08Mar2023:15:23:52):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -vlog_ext +.vh -disable_sem2009 test.sv -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex.so )
+s10::(08Mar2023:15:24:05):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -vlog_ext +.vh -disable_sem2009 test.sv -y /edatools/xilinx/Vivado/2020.1/d )
+s11::(08Mar2023:15:26:51):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -vlog_ext +.vh -disable_sem2009 test.sv -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex.so )
+s12::(08Mar2023:15:28:39):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 3232 +define+SIZE1 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v )
+s13::(08Mar2023:15:33:20):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -vlog_ext +.vh -disable_sem2009 test.sv -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex.so )
+s14::(08Mar2023:15:33:50):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 322323 +define+SIZE0 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v )
+s15::(08Mar2023:15:35:29):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed +define+SIZE0 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v )
+s16::(08Mar2023:15:36:07):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 210199 +define+SIZE0 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v )
+s17::(08Mar2023:15:37:03):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 210199 +define+SIZE0 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex.so -input uvm.cmd -covoverwrite -coverage B -covdut imdct_fft_with_ram256 -covtest test_cov_appo/ )
+s18::(08Mar2023:15:39:19):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 23828 +define+SIZE1 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v )
+s19::(08Mar2023:15:39:31):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 210199 +define+SIZE0 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex.so -input uvm.cmd -covoverwrite -coverage B -covdut imdct_fft_with_ram256 -covtest test_cov_appo/ )
+s20::(08Mar2023:15:40:29):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 3223 +define+SIZE1 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex.so -input uvm.cmd -covoverwrite -coverage B -covdut imdct_fft_with_ram256 -covtest test_cov_appo/ )
+s21::(08Mar2023:15:40:46):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 3223 +define+SIZE0 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex.so -input uvm.cmd -covoverwrite -coverage B -covdut imdct_fft_with_ram256 -covtest test_cov_appo/ )
+s22::(08Mar2023:15:41:32):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 121 +define+SIZE1 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex.so -input uvm.cmd -covoverwrite -coverage B -covdut imdct_fft_with_ram256 -covtest test_cov_appo/ )
+s23::(08Mar2023:15:41:44):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r +xmlicq +sv -seed 121 +define+SIZE0 -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi_c_ex.so -input uvm.cmd -covoverwrite -coverage B -covdut imdct_fft_with_ram256 -covtest test_cov_appo/ )
