--- a/component/xcelium.d/history
+++ b/component/xcelium.d/history
@@ -2,5 +2,7 @@
 // File created by:  xrun
 // Do not modify this file
 
-s1::(16Mar2023:18:09:03):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r -seed n +xmlicq +sv -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi.so -covoverwrite -coverage B -covdut imdct_fft_with_ram256 -input ./uvm.cmd +define+SIZE0 -covtest test_cov_appo0 )
-s2::(16Mar2023:18:09:12):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r -seed n +xmlicq +sv -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi.so -covoverwrite -coverage B -covdut imdct_fft_with_ram256 -input ./uvm.cmd +define+SIZE1 -covtest test_cov_appo1 )
+s1::(17Mar2023:09:26:05):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r -seed n +xmlicq +sv -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi.so -covoverwrite -coverage A -covdut imdct_fft_with_ram256 -input ./uvm.cmd +define+SIZE0 -covtest test_cov_appo0 )
+s2::(17Mar2023:09:26:10):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r -seed n +xmlicq +sv -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi.so -covoverwrite -coverage A -covdut imdct_fft_with_ram256 -input ./uvm.cmd +define+SIZE1 -covtest test_cov_appo1 )
+s3::(17Mar2023:09:26:14):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r -seed n +xmlicq +sv -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi.so -covoverwrite -coverage A -covdut imdct_fft_with_ram256 -input ./uvm.cmd +define+SIZE0 -covtest test_cov_appo0 )
+s4::(17Mar2023:09:26:17):( xrun -uvm +libtext_.v +xm64bit +xmtimescale+1ns/10ps +access+r -seed n +xmlicq +sv -vlog_ext +.vh -disable_sem2009 -F filelist.f -y /edatools/xilinx/Vivado/2020.1/data/verilog/src/unisims +libext+.v -sv_lib libdpi.so -covoverwrite -coverage A -covdut imdct_fft_with_ram256 -input ./uvm.cmd +define+SIZE1 -covtest test_cov_appo1 )
